# SpyEyes

./:   .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GhostTR.py  LICENSE  README.en.md  README.md  TUTORIAL.md  pyproject.toml  requirements.txt  spyeyes.py
.github/: release-notes-v1.0.0.md  release-notes-v1.1.1.md  release-notes-v1.2.0.md  release-notes-v1.2.1.md  release-notes-v1.2.3.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish-pypi.yml
Downloads/: subdomain_akxan.com_20260509-133135.html
data/: platforms.json
docs/: CHANGELOG.md  SECURITY.md  TUTORIAL.md  _config.yml  index.md
docs/design/: 2026-05-13-one-click-upgrade.md
docs/plans/: 2026-05-13-one-click-upgrade-plan.md
spyeyes/: __init__.py
spyeyes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spyeyes/data/: platforms.json
tests/: conftest.py  test_build_platforms.py  test_ghosttrack.py  test_investigate.py  test_spyeyes.py
tools/: build_platforms.py
下载/: subdomain_euroxanty.com_20260509-132749.html  subdomain_euroxanty.com_20260509-133007.graph.html  subdomain_euroxanty.com_20260509-133010.html
