# SpyEyes 包元数据 / 让 `pip install spyeyes` 能 work
# 主要好处：
#   - 用户可以 pipx install / pip install --user
#   - python_requires 在 pip 阶段拦掉不兼容的 Python 版本
#   - 未来发布 PyPI 的基础

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spyeyes"
version = "1.1.0"  # 同步：spyeyes.py __version__ + docs/CHANGELOG.md + git tag
description = "All-in-One OSINT toolkit (bilingual zh/en) — IP / Phone / Username / WHOIS / MX / Email"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Akxan" }]
keywords = ["osint", "ip-tracker", "phone-tracker", "username-search",
            "whois-lookup", "dns-lookup", "email-verification", "cybersecurity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.33.1,<3",
    "phonenumbers>=9.0.29,<10",
    "dnspython>=2.8.0,<3",
    "python-whois>=0.9.6,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/Akxan/SpyEyes"
Repository = "https://github.com/Akxan/SpyEyes"
"Bug Tracker" = "https://github.com/Akxan/SpyEyes/issues"
Changelog = "https://github.com/Akxan/SpyEyes/blob/main/docs/CHANGELOG.md"

[project.scripts]
spyeyes = "spyeyes:main"

[tool.setuptools]
# 单文件项目：只打包根目录的 spyeyes.py + 数据
py-modules = ["spyeyes"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["data/platforms.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
