# SpyEyes 包元数据
#
# 注意：当前是 single-module 项目（spyeyes.py 在根目录 + data/ 在根目录），
# `pip install .` 会装 spyeyes.py 但**不会**装 data/platforms.json
# → 装完后 _PLATFORMS_JSON 路径找不到文件，只剩 ~30 个 curated 平台。
#
# 完整 pip install 支持需要重构为 package（spyeyes/ 子目录 + spyeyes/data/）。
# 本文件目前主要用途：
#   - 声明 python_requires 阻止旧版 Python 安装
#   - 提供 PyPI 发布的元数据基础（在重构为 package 后）
#   - 让工具（ruff/mypy）找到配置
#
# 推荐使用方式：git clone + `python3 spyeyes.py`

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spyeyes"
version = "1.0.0"  # 同步：spyeyes.py __version__ + docs/CHANGELOG.md + git tag
description = "All-in-One OSINT toolkit (bilingual zh/en) — IP / Phone / Username / WHOIS / MX / Email"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Akxan" }]
keywords = ["osint", "ip-tracker", "phone-tracker", "username-search",
            "whois-lookup", "dns-lookup", "email-verification", "cybersecurity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.33.1,<3",
    "phonenumbers>=9.0.29,<10",
    "dnspython>=2.8.0,<3",
    "python-whois>=0.9.6,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/Akxan/SpyEyes"
Repository = "https://github.com/Akxan/SpyEyes"
"Bug Tracker" = "https://github.com/Akxan/SpyEyes/issues"
Changelog = "https://github.com/Akxan/SpyEyes/blob/main/docs/CHANGELOG.md"

# [project.scripts] 暂时禁用 —— pip install 不带 platforms.json，scripts entry
# 会让用户误以为可用但实际只有 30 平台。等 package 重构后启用：
# spyeyes = "spyeyes:main"

[tool.setuptools]
# 单文件项目：仅打包根目录的 spyeyes.py
# 注意：data/platforms.json 不在 wheel 里（py-modules 不支持非 package data）
# → pip install 后只剩 ~30 个 curated 平台。完整 PyPI 支持需重构为 package。
# [tool.setuptools.package-data] 对 py-modules 不生效，已删除避免误导
py-modules = ["spyeyes"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
