# SpyEyes 包元数据
#
# 项目结构（v1.0.0 后重构为 proper package）:
#   spyeyes/
#     __init__.py    # 主代码（之前的 spyeyes.py）
#     __main__.py    # python -m spyeyes 入口
#     data/
#       platforms.json   # 3164 平台数据库（v1.1.0，自动打进 wheel）
#
# 安装方式:
#   pip install .                    # 从 source
#   pip install spyeyes              # 从 PyPI（待发布）
#   spyeyes --version                # 安装后的命令
#   python -m spyeyes ip 8.8.8.8     # 模块调用
#
# 仍支持: git clone + python -m spyeyes（无需 pip install）

[build-system]
# setuptools>=77.0.1 是 PEP 639 SPDX `license = "Apache-2.0"` 字符串
# + license-files 列表的最低版本（旧版会 ValueError: invalid pyproject.toml config）
requires = ["setuptools>=77.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spyeyes"
version = "1.2.0"  # 同步：spyeyes/__init__.py __version__ + docs/CHANGELOG.md + git tag
description = "All-in-One OSINT toolkit (bilingual zh/en) — IP / Phone / Username (3164 platforms) / WHOIS / MX / Email + Permutations / Recursive / 8 report formats (HTML / PDF / XMind / Graph ...)"
readme = "README.md"
requires-python = ">=3.10"
# PEP 639 SPDX 表达式（替代弃用的 license = { text = ... } 和 license classifier）
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Akxan" }]
keywords = ["osint", "ip-tracker", "phone-tracker", "username-search",
            "whois-lookup", "dns-lookup", "email-verification", "cybersecurity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.33.1,<3",
    "phonenumbers>=9.0.29,<10",
    "dnspython>=2.8.0,<3",
    "python-whois>=0.9.6,<2",
]

[project.optional-dependencies]
# 可选 extras（v1.1.0）：默认安装为最小依赖；按需启用：
#   pip install "spyeyes[pdf]"   # 需要 PDF 报告
#   pip install "spyeyes[all]"   # 全部可选功能
pdf = [
    "reportlab>=4.0,<5",
]
all = [
    "reportlab>=4.0,<5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "types-requests>=2.31",
    "reportlab>=4.0,<5",
]

[project.urls]
Homepage = "https://github.com/Akxan/SpyEyes"
Repository = "https://github.com/Akxan/SpyEyes"
"Bug Tracker" = "https://github.com/Akxan/SpyEyes/issues"
Changelog = "https://github.com/Akxan/SpyEyes/blob/main/docs/CHANGELOG.md"

[project.scripts]
spyeyes = "spyeyes:main"

[tool.setuptools.packages.find]
include = ["spyeyes*"]
exclude = ["tests*", "tools*", "docs*"]

[tool.setuptools.package-data]
# 把 platforms.json 打进 wheel（之前 py-modules 时无法实现的关键修复）
spyeyes = ["data/*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
